build-files/ppanggolin/2.2.2/README.md
# PPanGGOLiN container

Main tool: [PPanGGOLiN](https://github.com/labgem/PPanGGOLiN)

<details>

<summary>Additional tools installed via micromamba:</summary>

```
  Name               Version       Build                 Channel    
──────────────────────────────────────────────────────────────────────
  _libgcc_mutex      0.1           conda_forge           conda-forge
  _openmp_mutex      4.5           2_gnu                 conda-forge
  aragorn            1.2.41        h7b50bb2_5            bioconda   
  archspec           0.2.5         pyhd8ed1ab_0          conda-forge
  aria2              1.37.0        hbc8128a_2            conda-forge
  blosc              1.21.6        he440d0b_1            conda-forge
  bokeh              3.7.3         pyhd8ed1ab_0          conda-forge
  bzip2              1.0.8         h4bc722e_7            conda-forge
  c-ares             1.34.5        hb9d3cd8_0            conda-forge
  c-blosc2           2.17.1        h3122c55_0            conda-forge
  ca-certificates    2025.4.26     hbd8a1cb_0            conda-forge
  colorama           0.4.6         pyhd8ed1ab_1          conda-forge
  contourpy          1.3.2         py312h68727a3_0       conda-forge
  dataclasses        0.8           pyhc8e2a94_3          conda-forge
  gawk               5.3.1         hcd3d067_0            conda-forge
  gmp                6.3.0         hac33072_2            conda-forge
  gmpy2              2.2.1         py312h7201bc8_0       conda-forge
  hdf5               1.14.6        nompi_h2d575fe_101    conda-forge
  icu                75.1          he02047a_0            conda-forge
  infernal           1.1.5         pl5321h7b50bb2_4      bioconda   
  jinja2             3.1.6         pyhd8ed1ab_0          conda-forge
  keyutils           1.6.1         h166bdaf_0            conda-forge
  krb5               1.21.3        h659f571_0            conda-forge
  lcms2              2.17          h717163a_0            conda-forge
  ld_impl_linux-64   2.43          h712a8e2_4            conda-forge
  lerc               4.0.0         h0aef613_1            conda-forge
  libaec             1.1.3         h59595ed_0            conda-forge
  libasprintf        0.24.1        h8e693c7_0            conda-forge
  libblas            3.9.0         31_h59b9bed_openblas  conda-forge
  libcblas           3.9.0         31_he106b2a_openblas  conda-forge
  libcurl            8.13.0        h332b0f4_0            conda-forge
  libdeflate         1.24          h86f0d12_0            conda-forge
  libedit            3.1.20250104  pl5321h7949ede_0      conda-forge
  libev              4.33          hd590300_2            conda-forge
  libexpat           2.7.0         h5888daf_0            conda-forge
  libffi             3.4.6         h2dba641_1            conda-forge
  libfreetype        2.13.3        ha770c72_1            conda-forge
  libfreetype6       2.13.3        h48d6fc4_1            conda-forge
  libgcc             15.1.0        h767d61c_2            conda-forge
  libgcc-ng          15.1.0        h69a702a_2            conda-forge
  libgettextpo       0.24.1        h5888daf_0            conda-forge
  libgfortran        15.1.0        h69a702a_2            conda-forge
  libgfortran5       15.1.0        hcea5267_2            conda-forge
  libgomp            15.1.0        h767d61c_2            conda-forge
  libiconv           1.18          h4ce23a2_1            conda-forge
  libidn2            2.3.8         ha4ef2c3_0            conda-forge
  libjpeg-turbo      3.1.0         hb9d3cd8_0            conda-forge
  liblapack          3.9.0         31_h7ac8fdf_openblas  conda-forge
  liblzma            5.8.1         hb9d3cd8_1            conda-forge
  libnghttp2         1.64.0        h161d5f1_0            conda-forge
  libnsl             2.0.1         hd590300_0            conda-forge
  libopenblas        0.3.29        pthreads_h94d23a6_0   conda-forge
  libpng             1.6.47        h943b412_0            conda-forge
  libsqlite          3.49.2        hee588c1_0            conda-forge
  libssh2            1.11.1        hcf80075_0            conda-forge
  libstdcxx          15.1.0        h8f9b012_2            conda-forge
  libstdcxx-ng       15.1.0        h4852527_2            conda-forge
  libtiff            4.7.0         hf01ce69_5            conda-forge
  libunistring       0.9.10        h7f98852_0            conda-forge
  libuuid            2.38.1        h0b41bf4_0            conda-forge
  libwebp-base       1.5.0         h851e524_0            conda-forge
  libxcb             1.17.0        h8a09558_0            conda-forge
  libxcrypt          4.4.36        hd590300_1            conda-forge
  libxml2            2.13.8        h4bc477f_0            conda-forge
  libzlib            1.3.1         hb9d3cd8_2            conda-forge
  lz4-c              1.10.0        h5888daf_1            conda-forge
  mafft              7.526         h4bc722e_0            conda-forge
  markupsafe         3.0.2         py312h178313f_1       conda-forge
  mmseqs2            15.6f452      pl5321h6a68c12_3      bioconda   
  mpc                1.3.1         h24ddda3_1            conda-forge
  mpfr               4.2.1         h90cbb55_3            conda-forge
  narwhals           1.40.0        pyhe01879c_0          conda-forge
  ncurses            6.5           h2d0b736_3            conda-forge
  networkx           3.4.2         pyh267e887_2          conda-forge
  nomkl              1.0           h5ca1d4c_0            conda-forge
  numexpr            2.10.2        py312h6a710ac_100     conda-forge
  numpy              1.26.4        py312heda63a1_0       conda-forge
  openjpeg           2.5.3         h5fbd93e_0            conda-forge
  openssl            3.5.0         h7b32b05_1            conda-forge
  packaging          25.0          pyh29332c3_1          conda-forge
  pandas             2.2.3         py312hf9745cd_3       conda-forge
  perl               5.32.1        7_hd590300_perl5      conda-forge
  pillow             11.2.1        py312h80c1187_0       conda-forge
  pip                25.1.1        pyh8b19718_0          conda-forge
  plotly             5.24.1        pyhd8ed1ab_1          conda-forge
  ppanggolin         2.2.2         h0fa9677_1            bioconda   
  pthread-stubs      0.4           hb9d3cd8_1002         conda-forge
  py-cpuinfo         9.0.0         pyhd8ed1ab_1          conda-forge
  pyrodigal          3.6.3.post1   py312h0fa9677_0       bioconda   
  pytables           3.10.2        py312h4f06452_4       conda-forge
  python             3.12.10       h9e4cc4f_0_cpython    conda-forge
  python-dateutil    2.9.0.post0   pyhff2d567_1          conda-forge
  python-tzdata      2025.2        pyhd8ed1ab_0          conda-forge
  python_abi         3.12          7_cp312               conda-forge
  pytz               2025.2        pyhd8ed1ab_0          conda-forge
  pyyaml             6.0.2         py312h178313f_2       conda-forge
  readline           8.2           h8c095d6_2            conda-forge
  scipy              1.15.2        py312ha707e6e_0       conda-forge
  setuptools         80.1.0        pyhff2d567_0          conda-forge
  six                1.17.0        pyhd8ed1ab_0          conda-forge
  snappy             1.2.1         h8bd8927_1            conda-forge
  tenacity           9.1.2         pyhd8ed1ab_0          conda-forge
  tk                 8.6.13        noxft_h4845f30_101    conda-forge
  tornado            6.5           py312h66e93f0_0       conda-forge
  tqdm               4.67.1        pyhd8ed1ab_1          conda-forge
  typing-extensions  4.13.2        h0e9735f_0            conda-forge
  typing_extensions  4.13.2        pyh29332c3_0          conda-forge
  tzdata             2025b         h78e105d_0            conda-forge
  wget               1.21.4        hda4d442_0            conda-forge
  wheel              0.45.1        pyhd8ed1ab_1          conda-forge
  xorg-libxau        1.0.12        hb9d3cd8_0            conda-forge
  xorg-libxdmcp      1.1.5         hb9d3cd8_0            conda-forge
  xyzservices        2025.4.0      pyhd8ed1ab_0          conda-forge
  yaml               0.2.5         h7f98852_2            conda-forge
  zlib               1.3.1         hb9d3cd8_2            conda-forge
  zlib-ng            2.2.4         h7955e40_0            conda-forge
  zstd               1.5.7         hb8e6e7a_2            conda-forge
```

</details>

Code repository: https://github.com/labgem/PPanGGOLiN

Basic information on how to use this tool:
- executable: ppanggolin
- help: --help
- version: --version
- description: |
> PPanGGOLiN builds pangenomes through a graphical model and a statistical method to partition gene families in persistent, shell and cloud genomes.

Additional information:

PPanGGOLiN only creates the pangenome graphs. It is recommended to use another tool to visualize them. Please read https://github.com/labgem/PPanGGOLiN/wiki for more information.
  
Full documentation: https://github.com/labgem/PPanGGOLiN/wiki

## Example Usage

```bash
ppanggolin annotate --fasta organisms.fasta.list --output output 

# many of the commands manipulate the 'pangenome.h5' file in place
ppanggolin cluster -p pangenome.h5
ppanggolin graph -p pangenome.h5 
ppanggolin partition -p pangenome.h5
ppanggolin draw -p pangenome.h5 --ucurve   

# there are some human-readable files that can be generated as well
ppanggolin write -p pangenome.h5 --stats --output stats
```
